SF-1261 getFile changed to getInputStream